--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,17 +4,22 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.6
+  geolocator: ^10.0.1
+  http: ^1.1.0
+  location: ^5.0.3
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^2.0.3
 
 flutter:
   uses-material-design: true
