--- a/.gitignore
+++ b/.gitignore
@@ -70,4 +70,5 @@
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
 
-lib/services/keys.dart
+/lib/services/key.dart
+/ios/Runner.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
